navbar(css, js): fix overflow bug

--- a/css/includes/_global.scss
+++ b/css/includes/_global.scss
@@ -8,7 +8,11 @@ body {
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: $background;
-    // overflow: hidden;
+    // overflow: scroll;
+    scrollbar-width: 0;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 a {
